--- a/TagNameMapper/Views/MainWindow.axaml
+++ b/TagNameMapper/Views/MainWindow.axaml
@@ -2,6 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:Behavior="using:TagNameMapper.Behaviors"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="TagNameMapper.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico" >
@@ -21,6 +22,8 @@
                                 Command="{Binding $parent[TreeView].DataContext.AddVariableTableCommand}"/>
                         <MenuItem Header="新增组" 
                                 Command="{Binding $parent[TreeView].DataContext.AddGroupCommand}"/>
+                        <MenuItem Header="重命名"
+                                Command="{Binding $parent[TreeView].DataContext.StartRenameCommand}"/>
                      </ContextMenu>
                     </StackPanel.ContextMenu>            
                    <Border Name="PART_LayoutRoot"
@@ -62,13 +65,11 @@
         </Style>
         <!-- 鼠标悬停浅蓝色 -->
         <Style Selector="TreeViewItem /template/ Border:pointerover">
-            <Setter Property="Background" Value="LightBlue"/>
+            <Setter Property="Background" Value="#E0EDF3"/>
         </Style>
          
         <Style Selector="TreeViewItem:selected /template/ Border">
-          <Setter Property="Background" Value="CornflowerBlue"/>
-          <Setter Property="BorderBrush" Value="DarkBlue"/>
-          <Setter Property="BorderThickness" Value="1"/>
+          <Setter Property="Background" Value="#C0CEE9"/>
         </Style>
 
        <!-- 展开状态的图形 (ToggleButton.IsChecked = True) -->
@@ -88,6 +89,10 @@
         <Bitmap x:Key="TableIcon">avares://TagNameMapper/Images/变量表图标.png</Bitmap>
     </Window.Resources>
     <Grid>
+        <Grid.RowDefinitions>
+			<RowDefinition Height="*"/>
+			<RowDefinition Height="100"/>
+		</Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="300"/>
             <ColumnDefinition Width="*"/>
@@ -95,37 +100,63 @@
         </Grid.ColumnDefinitions>
         
         <!-- 左侧TreeView显示TagGroup -->
-        <TreeView Grid.Column="0" 
+        <TreeView Grid.Column="0" Grid.Row="0"
                   ItemsSource="{Binding TagGroups}" 
                   Margin="1"
                   SelectedItem="{Binding SelectedTagGroup}">
             <TreeView.ItemTemplate>                
                 <TreeDataTemplate ItemsSource="{Binding ChildGroups}">
                     <StackPanel Orientation="Horizontal" Height="20">
-                        <Image Margin="1,1,5,1">
-                            <Interaction.Behaviors>
-                                <DataTriggerBehavior Binding="{Binding GroupType}" ComparisonCondition="LessThanOrEqual" Value="1">
-                                    <ChangePropertyAction PropertyName="Source" Value="{StaticResource FolderIcon}" />
-                                </DataTriggerBehavior>
-                                <DataTriggerBehavior Binding="{Binding GroupType}" ComparisonCondition="GreaterThan" Value="1">
-                                    <ChangePropertyAction PropertyName="Source" Value="{StaticResource TableIcon}" />
-                                </DataTriggerBehavior>
-                            </Interaction.Behaviors>
+                        <Image Margin="1,1,5,1" Tag="{Binding GroupType}">
+                            <Image.Styles>
+                                 <Style Selector="Image[Tag=0],Image[Tag=1]">
+                                     <Setter Property="Source" Value="{StaticResource FolderIcon}" />
+                                 </Style>
+                                 <Style Selector="Image[Tag=2]">
+                                     <Setter Property="Source" Value="{StaticResource TableIcon}" />
+                                 </Style>
+                             </Image.Styles>
                         </Image>
-                        <TextBlock Text="{Binding Name}" HorizontalAlignment="Left" VerticalAlignment="Center" />
+
+                        <TextBlock Text="{Binding Name}" HorizontalAlignment="Left" VerticalAlignment="Center" IsVisible="{Binding !IsEditing}" />
+                        <TextBox   Text="{Binding $parent[TreeView].DataContext.EditingName}" HorizontalAlignment="Left" VerticalAlignment="Center" BorderThickness="0" IsVisible="{Binding IsEditing}" >
+                             <TextBox.KeyBindings>
+                                  <KeyBinding Gesture="Enter" 
+                                            Command="{Binding $parent[TreeView].DataContext.ConfirmRenameCommand}" />
+                                  <KeyBinding Gesture="Escape" 
+                                            Command="{Binding $parent[TreeView].DataContext.CancelRenameCommand}" />
+                              </TextBox.KeyBindings>
+                              
+                              <Interaction.Behaviors>
+                                  <EventTriggerBehavior EventName="LostFocus">
+                                      <InvokeCommandAction Command="{Binding $parent[TreeView].DataContext.ConfirmRenameCommand}" />
+                                  </EventTriggerBehavior>
+                              </Interaction.Behaviors>
+                        </TextBox>
+
                     </StackPanel>
                 </TreeDataTemplate>
             </TreeView.ItemTemplate>
         </TreeView>
         
         <!-- 右侧预留空间 -->
-        <Border Grid.Column="1"  Background="LightGray" Margin="1" BorderThickness="1" BorderBrush="Black" >
+        <Border Grid.Column="1" Grid.Row="0"  Background="LightGray" Margin="1" BorderThickness="1" BorderBrush="Black" >
             <TextBlock Text="右侧内容区域" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Border>
-        <StackPanel Grid.Column="2" >
+        <StackPanel Grid.Column="2" Grid.Row="0" >
             <Button Content="test" Command="{Binding LoadDataCommand}" Margin="1" Height="100" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" />       
         </StackPanel>
-
+        <ListBox  Grid.ColumnSpan="3" Grid.Row="1"  ItemsSource="{Binding LogMessages}"  FontSize="16" Margin="5"  >
+					<ListBox.Styles>
+						<Style Selector="ListBoxItem">
+							<Setter Property="Padding" Value="0" />
+							<Setter Property="Margin" Value="0" />
+						</Style>
+					</ListBox.Styles>
+					<Interaction.Behaviors>
+						<Behavior:AutoScrollToEndBehavior />
+					</Interaction.Behaviors>			
+		</ListBox>
     </Grid>
 
 </Window>
